[tool.poetry]
name = "evclust"
version = "0.1.0"
description = "Evidential c-Means Clustering"
authors = ["Armel SOUBEIGA"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12, >=3.8"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
scipy = "1.10.0"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

