[tool.poetry]
name = "evclust"
version = "0.1.1"
description = "Evidential c-Means Clustering"
authors = ["Armel SOUBEIGA"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12, >=3.8"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
scipy = "1.10.0"
seaborn = "^0.12.2"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = "^0.17.2"
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

