[tool.poetry]
name = "evclust"
version = "0.2.1"
description = "Evidential Clustering"
authors = ["Armel SOUBEIGA"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
scipy = "^1.10.0"
seaborn = "^0.12.2"
sphinx-thebe = "^0.3.1"
myst-parser = "^3.0.1"
sphinx-autoapi = "^3.1.2"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
sphinx = "7.4.5"
myst-nb = "1.1.1"
sphinx-autoapi = "3.1.2"
sphinx-book-theme = "^1.1.3"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

